tests/fail_syntax/literal.rs
fn main() {
    let input = "hi";
    let fmt = "{}";
    sscanf::scanf!(input, fmt, std::vec::Vec<usize>);
}
